create homepage and add links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,17 @@
   </head>
 
   <body>
-  	 <% flash.each do |name, msg| %>
+  <% flash.each do |name, msg| %>
 		<ul>
 			<li><%= msg %></li>
 		</ul>
 
 	<% end %>
-    <%= yield %>
+
+    <%= render 'layouts/navigation'%>
+    <div class="container">
+      <%= yield %>
+    </div>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
