--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,65 @@
+$navbar-default-bg:black;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#logo {
+	float:left;
+	font-size:1.7em;
+	color:#fff;
+	text-transform:uppercase;
+	letter-spacing: -1px;
+	font-weight:bold;
+}
+
+#logo:hover {
+	color :#fff;
+	text-decoration :none;
+}
+
+.center {
+	text-align: center;
+}
+
+.jumbotron {
+	background-image: asset-url('Oli-Blog-2.jpg');
+	background-size:cover;
+	height:480px;
+}
+.jumbotron h1 {
+	color : #fff;
+	text-align: center;
+	margin-bottom:3  0px;
+	letter-spacing:-1px;
+	font-weight:bold;
+}
+
+.btn-xlarge{
+	font-size:1.7em;
+	background-color:black;
+}
+
+.footer {
+	margin-top :30px;
+	padding-top:5px;
+	border-top:1px solid #eaeaea;
+	color: #777;
+}
+
+.footer a:hover {
+	color:#222;
+}
+
+.footer small {
+	float:left;
+}
+
+.footer ul {
+	float :right;
+	list-style:none;
+}
+
+footer ul li {
+	float :left;
+	margin-left:15px;
+}
