--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
-<h1>we are in home page</h1>
-
-<%= link_to 'GetConnected-Blog',articles_path%> | <%= link_to 'about',about_path%>
+<div class="center jumbotron">
+	<h1>GetConnected-Blog</h1>
+	<%= link_to "Sign up now","#" ,class: "btn btn-primary btn-lg btn-xlarge " %>
+</div>
