--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -14,30 +14,40 @@
 
 <% end %>
 
+<div class="row">
+	<div class="col-xs-12">
+		<%= form_for(@article, :html => {class: "form-horizontal",rol: "form"}) do |f| %>
+			<div class="form-group">
+				<div class="control-label col-sm-2">
+					<%= f.label :title %>
+				</div>
+				<div class="col-sm-8">
+					<%= f.text_field :title ,class: "form-control",placeholder: "Titl of an article",autofocus: true%>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="control-label col-sm-2">
+					<%= f.label :description %>
+				</div>
+				<div class="col-sm-8">
+					<%= f.text_area :description,rows: 10,class: "form-control",placeholder: "Description  of anarticle",autofocus: true %>
 
-<%= form_for @article do |f| %>
+				</div>
+			</div>
 
-<p>
+		
+		<div class="form-group">
+			<div class="col-sm-offset-2 col-sm-10">
+				<%= f.submit class: "btn btn-primary btn-larger" %>
+			</div>
+		</div>
 
-<%= f.label :title %><br/>
+		
 
-<%= f.text_field :title %>
+		<% end %>
+		<div class="col-xs-4 col-xs-offset-4">
+		[ <%= link_to "cancel request return to article listing", articles_path %> ]
+		</div>
+	</div>
 
-</p>
-
-<p>
-
-<%= f.label :description %><br/>
-
-<%= f.text_area :description %>
-
-</p>
-
-<p>
-
-<%= f.submit %>
-
-</p>
-
-<% end %>
-<%= link_to "Back to articles listing", articles_path %>
+</div>
