--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,16 +1,16 @@
-<h1>Showing selected article</h1>
+<h2 align="center">
+Title: <%= @article.title %></h2>
 
-<p>
+<div class="well col-xs-8 col-xs-offset-2">
+	<h4 class="center description"><strong> Description</strong></h4>
+	<hr>
 
-Title: <%= @article.title %>
+ 	<%= simple_format(@article.description )%>
+ 	<div class="article-actions">
 
-</p>
+		<%= link_to "Edit this article", edit_article_path(@article),class:"btn btn-xs btn-primary" %> |
 
-<p>
-
-Description: <%= @article.description %>
-
-</p>
-<%= link_to "Edit this article", edit_article_path(@article) %> |
-
-<%= link_to "Back to articles listing", articles_path %>
+		<%= link_to "View all articles", articles_path,class:"btn btn-xs btn-success" %>
+		<%= link_to 'Delete this article', article_path(@article),method: :delete,data: {confirm:"Are you sure?"},class:"btn btn-xs btn-danger"%>
+	</div>
+</div>
