stylling of all crud pages completed

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -72,3 +72,17 @@ footer ul li {
 .description{
 	margin-top :0;
 }
+
+.article-title {
+ font-weight: bold;
+ font-size: 1.5 em;
+
+	
+}
+
+.article-body {
+border-top:1px solid #eaeaea;
+padding-top:10px;
+padding-bottom:10px;
+	
+}
