--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -91,3 +91,11 @@ padding-bottom:10px;
 	border-top: 1px solid #eaeaea;
 	margin-top:15px;
 }
+
+.listing {
+
+list-style: none;
+
+padding-left: 0;
+
+}
