--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,42 @@
 <h2 align="center">
-Title: <%= @article.title %></h2>
+
+<% if @article.user %>
+
+<ul class="listing">
+
+<div class="row center">
+
+<div class="col-md-4 col-md-offset-4">
+
+<li>Created by:</li>
+
+<li><%= link_to gravatar_for(@article.user), user_path(@article.user) %></li>
+
+<li class="article-title">
+
+<%= link_to @article.user.username, user_path(@article.user) %>
+
+</li>
+
+<li><small>
+
+<%= pluralize(@article.user.articles.count, "article") if @article.user.articles %>
+
+</small></li>
+
+</div>
+
+</div>
+
+</ul>
+
+<% end %>
 
 <div class="well col-xs-8 col-xs-offset-2">
 	<h4 class="center description"><strong> Description</strong></h4>
 	<hr>
 
- 	<%= simple_format(@article.description )%>
+ 	<%= simple_format(@article.description ) %>
  	<div class="article-actions">
 
 		<%= link_to "Edit this article", edit_article_path(@article),class:"btn btn-xs btn-primary" %> |
