--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <h1 align="center">All Alpha Bloggers</h1>
 	<div align="center">
+		<%= will_paginate @users%>
 		<% @users.each do |user| %>
 			<ul class="listing">
 				<div class="row">
@@ -18,4 +19,7 @@
 			</ul>
 
 		<% end %>
+		 <%= will_paginate @users%>
+
+
 	</div>
