--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,11 @@
 <h1 align="center">Listing all articles</h1>
+<div align="center">
+	<%= will_paginate @article %>
+</div>
 <%= render 'article', obj: @article %>
+<div align="center">
+	<%= will_paginate @article%>
+</div>
 
 
 
