--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -12,12 +12,12 @@
 					</small>
 				</div>
 				</div>
-				<% if article.user%>
-				<div class="article-actions">
+				<% if logged_in? && current_user == article.user%>
+					<div class="article-actions">
 
-					<%= link_to "Edit this article", edit_article_path(article),class:"btn btn-xs btn-primary" %> |
-					<%= link_to 'Delete this article', article_path(article),method: :delete,data: {confirm:"Are you sure?"},class:"btn btn-xs btn-danger"%>
-				</div>
+						<%= link_to "Edit this article", edit_article_path(article),class:"btn btn-xs btn-primary" %> |
+						<%= link_to 'Delete this article', article_path(article),method: :delete,data: {confirm:"Are you sure?"},class:"btn btn-xs btn-danger"%>
+					</div>
 				<% end %>
 			</div>
 		</div>
