--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,47 +1,53 @@
-<h2 align="center">
+
 
 <% if @article.user %>
 
-<ul class="listing">
+	<ul class="listing">
 
-<div class="row center">
+	<div class="row center">
 
-<div class="col-md-4 col-md-offset-4">
+		<div class="col-md-4 col-md-offset-4">
 
-<li>Created by:</li>
+		<li>Created by:</li>
 
-<li><%= link_to gravatar_for(@article.user), user_path(@article.user) %></li>
+		<li><%= link_to gravatar_for(@article.user), user_path(@article.user) %></li>
 
-<li class="article-title">
+		<li class="article-title">
 
-<%= link_to @article.user.username, user_path(@article.user) %>
+		<%= link_to @article.user.username, user_path(@article.user) %>
 
-</li>
+		</li>
 
-<li><small>
+		<li><small>
 
-<%= pluralize(@article.user.articles.count, "article") if @article.user.articles %>
+		<%= pluralize(@article.user.articles.count, "article") if @article.user.articles %>
 
-</small></li>
+		</small></li>
 
-</div>
+		</div>
 
-</div>
+	</div>
 
-</ul>
+	</ul>
 
 <% end %>
+<h2 align="center">Title: <%= @article.title %></h2>
 
 <div class="well col-xs-8 col-xs-offset-2">
-	<h4 class="center description"><strong> Description</strong></h4>
+
+			
+	
+	<h4 class="description"><strong> Description</strong></h4>
 	<hr>
 
  	<%= simple_format(@article.description ) %>
  	<div class="article-actions">
+ 		<% if logged_in? && current_user == @article.user%>
+			<%= link_to "Edit this article", edit_article_path(@article),class:"btn btn-xs btn-primary" %> |
+			<%= link_to 'Delete this article', article_path(@article),method: :delete,data: {confirm:"Are you sure?"},class:"btn btn-xs btn-danger"%>
+		<% end %>
+			<%= link_to "View all articles", articles_path,class:"btn btn-xs btn-success" %>
 
-		<%= link_to "Edit this article", edit_article_path(@article),class:"btn btn-xs btn-primary" %> |
-
-		<%= link_to "View all articles", articles_path,class:"btn btn-xs btn-success" %>
-		<%= link_to 'Delete this article', article_path(@article),method: :delete,data: {confirm:"Are you sure?"},class:"btn btn-xs btn-danger"%>
+		
 	</div>
 </div>
